--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -7,11 +7,13 @@
     h2 {
         text-align: center;
     }
+
     img {
         display: block;
         margin-left: auto;
         margin-right: auto;
     }
+
     #Datmua a {
         clear: both;
         background-color: red;
@@ -25,13 +27,14 @@
         text-decoration: none;
         font-weight: bold;
     }
+
         #Datmua a:hover {
             background-color: gray;
             color: red;
         }
 </style>
 <h2>Details</h2>
-<img src="~/image/templatemo_image_04.jpg" />
+<img src="~/image/@Model.Anhbia" alt="Model.Tensach" style="width:100px;height:auto;">
 <h2>@Model.Tensach</h2>
 <h2>@Model.Giaban</h2>
 <div id="Datmua"><a href="@Url.Action("AddToCard","ShoppingCard",new {id = Model.Masach})">DAT MUA</a></div>
