--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
                 <tr>
                     <td>
                         <a href="@Url.Action("Details", "Home", new { id = book.Masach })">
-                            <img src="~/image/templatemo_image_02.jpg" alt="@book.Tensach" style="width:100px;height:auto;">
+                            <img src="~/image/@book.Anhbia" alt="@book.Tensach" style="width:100px;height:auto;">
                         </a>
                     </td>
                     <td>
