--- a/Views/Home/Details.cshtml
+++ b/Views/Home/Details.cshtml
@@ -37,6 +37,6 @@
 <img src="~/image/@Model.Anhbia" alt="Model.Tensach" style="width:100px;height:auto;">
 <h2>@Model.Tensach</h2>
 <h2>@Model.Giaban</h2>
-<div id="Datmua"><a href="@Url.Action("AddToCard","ShoppingCard",new {id = Model.Masach})">DAT MUA</a></div>
+<div id="Datmua"><a href="@Url.Action("ThemGiohang","GioHang",new {iMasach = Model.Masach, strURL = Url.Action("GioHang","GioHang")})">DAT MUA</a></div>
 
 
