--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+   
     <link href="~/Content/Style.css" rel="stylesheet" type="text/css" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
@@ -20,6 +20,7 @@
                 <li><a href="subpage.html">New Releases</a></li>
                 <li><a href="#">Company</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><a href="/Giohang/GioHang">Gio Hang <a href="@Html.Action("Giohangpartial", "GioHang")"></a></a></li>
             </ul>
         </div> <!-- end of menu -->
 
